# boloot-persian-calendar

./: .gitignore  Cargo.toml  Makefile  README.md
.cursor/rules/: boloot-architecture.mdc  boloot-calendar-domain.mdc  boloot-linux-integration.mdc  boloot-rust.mdc  boloot-ui.mdc
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: adhan.rs  brand.rs  calendar.rs  colors.rs  config.rs  countries.rs  error.rs  format.rs  holidays.rs  lib.rs  locale.rs  month_view.rs  prayer.rs  service.rs  system_locale.rs  system_time.rs  ui_strings.rs  wisdom.rs
daemon/: Cargo.toml
daemon/src/: adhan.rs  dbus_iface.rs  debug_log.rs  main.rs  notifications.rs  registry.rs
data/: countries.json
data/dconf/gdm/: 00-boloot-calendar  50-boloot-calendar
data/dconf/user/: 00-boloot-calendar
data/holidays/: afghanistan.json  iran.json  tajikistan.json
data/locations/: afghanistan.json  africa.json  east_asia.json  europe.json  iran.json  latin_america.json  middle_east.json  north_america.json  oceania.json  russia_central_asia.json  south_asia.json  tajikistan.json
data/sounds/: README.md
data/system-config/: config.toml
data/wisdom/: imam_ali.json
dbus/: org.boloot.Calendar.conf  org.boloot.Calendar.service  org.boloot.Calendar.xml
gnome-shell/: extension.js  metadata.json  stylesheet.css
gnome-shell/locale/en/LC_MESSAGES/: boloot-calendar.mo
gnome-shell/locale/fa/LC_MESSAGES/: boloot-calendar.mo
gnome-shell/locale/fa_AF/LC_MESSAGES/: boloot-calendar.mo
gnome-shell/locale/po/: en.po  fa.po  fa_AF.po  ps.po  tg.po
gnome-shell/locale/ps/LC_MESSAGES/: boloot-calendar.mo
gnome-shell/locale/tg/LC_MESSAGES/: boloot-calendar.mo
kde/plasmoid/: main.qml  metadata.json
locale/profile.d/: boloot-calendar.sh
packaging/: README.md
packaging/arch/: PKGBUILD  boloot-calendar.install
packaging/debian/: boloot-calendar-core.postinst  boloot-calendar-core.postrm  boloot-calendar-core.prerm  changelog  control  copyright  rules
packaging/flatpak/: boloot-calendar-host-setup  org.boloot.Calendar.metainfo.xml  org.boloot.Calendar.yml
packaging/polkit/: org.boloot.calendar.apply-system.policy
packaging/rpm/: boloot-calendar.spec
scripts/: boloot-calendar-apply-system  boloot-calendar-settings  build-deb.sh  build-flatpak.sh  build-rpm.sh  build_countries.py  build_imam_ali_wisdom.py  check-gnome-extension.sh  compile-i18n.py  enable-gdm-extension.sh  enable-gnome-extension.sh  fix-top-bar.sh  install-deps.sh  install-system.sh
settings/: boloot-settings.css  boloot-settings.py  org.boloot.Calendar.desktop
settings/po/: ar.po  en.po  es.po  fa.po  fa_AF.po  fr.po  ps.po  ru.po  tg.po  zh.po
systemd/: boloot-calendard.service
xfce/: boloot-xfce-clock.py
(+10 files in other folders)
