[package]
name = "boloot-calendar-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "BOLOOT Persian Calendar command-line tool"

[[bin]]
name = "boloot-calendar-ctl"
path = "src/main.rs"

[dependencies]
boloot-cal-core = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
