[package]
name = "boloot-cal-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core engine for BOLOOT Persian Calendar (boloot.ir)"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
salah = { workspace = true }
parsidate = { workspace = true }
hijri_date = { workspace = true }
dirs = { workspace = true }
libc = "0.2"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
